# cms-challenge

./: .gitignore  README.md  docker-compose.yml
dashboard/: package.json  pnpm-lock.yaml  tsconfig.json
dashboard/src/: app.html  types.ts
dashboard/src/lib/: api.ts
dashboard/src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts  Header.svelte
dashboard/src/routes/components/: CreateButton.svelte
dashboard/src/routes/create/: +page.svelte  +page.ts
dashboard/src/routes/dashboard/: +page.svelte  +page.ts
db/dbdoc/: README.md  contents.md  schema.json
db/migrations/: entrypoint.sh
db/migrations/migrations/: 000001_asunaro.up.sql  000002_load.down.sql  000002_load.up.sql
go/: .env  go.mod  go.sum  main.go
go/cmd/: main.go
nest/: .env  bun.lockb  package.json  pnpm-lock.yaml  tsconfig.json
nest/src/: main.ts
nest/src/infrastructure/: controller.ts  transform.ts
nest/src/infrastructure/controller/: auth-controller.ts  post-controller.ts
nest/src/module/: .RootModule.ts  AuthModule.ts  PostModule.ts
nest/src/post/: module.ts
nest/src/util/: mixin.ts
python/: .gitignore  main.py  pyproject.toml
python/src/core/post/domain/entity/: post.py
python/src/core/post/domain/repository/: post_repository.py
python/src/core/post/usecase/getpost/: impl.py  interface.py
python/src/infrastructure/: controller.py
python/src/infrastructure/datastore/mysql/: __init__.py  config.py  post_mysql_repository_impl.py
python/src/module/: post_module.py
scala-cms/: build.sbt
terraform/production/: main.tf
(+61 files in other folders)
