[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Asunaro276", email = "ryuhei276276@gmail.com" }
]
dependencies = [
    "fastapi>=0.111.0",
    "sqlalchemy>=2.0.30",
    "mysql-connector-python>=8.4.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/python"]

[tool.rye.scripts]
server = { cmd = "uvicorn main:app --reload --port=8080" }
